fix redundant overwhitespacing on model descriptions

--- a/src/wwwroot/css/genpage.css
+++ b/src/wwwroot/css/genpage.css
@@ -318,7 +318,6 @@ body {
     height: 10rem;
     overflow: auto;
     display: inline-block;
-    white-space: pre-wrap;
     word-break: break-all;
     font-size: 80%;
 }
